# CV-Project

./: .gitignore  README.md  character_runtime.py  character_workbench.py  config.json  pet.py  plan.md  pyproject.toml
Murasame/: __init__.py  utils.py
docs/: app.js  index.html  styles.css
experiments/: README.md  aggregate_report_json.py  background_postprocessing.py  common.py  config.json  expression_consistency.py  generate_image_sets.py  run_all.py  runtime_manual_placeholder.py
experiments/input/white_background/: README.md
scripts/: __init__.py  build_executable.py  character_traits.py  desktop_tools.py  pet_actions.py  pet_api.py  pet_app.py  pet_defaults.py  pet_tools.py  pet_widget.py  pet_workers.py  profile.py
scripts/workbench/: __init__.py  bridge.py  cards.py  constants.py  dialog.py  generator.py  image_processing.py  profile_payload.py  workers.py
ui/: character_workbench.css  character_workbench.html  character_workbench.js
